--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <button id="2" onclick="get(this)">2</button>
             <button id="3" onclick="get(this)">3</button>
             <button id="0" onclick="get(this)">0</button>
-            <button id="decimal">.</button>
-            <button id="decimal00">00</button>
+            <button id="decimal" onclick="addDecimal()">.</button>
+            <button id="decimal00" onclick="addDecimal00()">00</button>
         </div>
     </div>
 
@@ -45,7 +45,15 @@
         }
         function clearDisplay() {
         document.getElementById("result").innerHTML = '0';
+
  }
+        function addDecimal() {
+        document.getElementById("result").innerHTML += ".";
+        }
+
+        function addDecimal00(){
+        document.getElementById("result").innerHTML +="00";
+        }
     </script>
 </body>
 <style>
